--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "1.0.0",
   "description": "This repository offers a comprehensive, step-by-step guide to building an automation testing framework using Playwright. Designed with junior Automation QA engineers in mind, it demystifies the process by breaking down the development of a framework from the ground up. Each commit is thoughtfully crafted to explain not just 'how' but 'why' each part of the framework is implemented, providing a solid foundation for understanding and extending it. Whether you're starting your journey in automation testing or looking to strengthen your understanding of testing frameworks, this repository serves as a practical, educational tool, guiding you through the nuances of creating a robust, scalable testing framework with Playwright.",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+      "test": "npx playwright test --project=chromium",
+      "ci": "npx playwright test --project=chromium --workers=1",
+      "flaky": "npx playwright test --project=chromium --repeat-each=20",
+      "debug": "npx playwright test --project=chromium --debug",
+      "ui": "npx playwright test --project=chromium --ui",
+      "smoke": "npx playwright test --grep @Smoke --project=chromium",
+      "sanity": "npx playwright test --grep @Sanity --project=chromium",
+      "api": "npx playwright test --grep @Api --project=chromium",
+      "regression": "npx playwright test --grep @Regression --project=chromium",
+      "fullTest": "npx playwright test"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Ivan Davidov",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.21"
   },
